--- a/project1/Cargo.toml
+++ b/project1/Cargo.toml
@@ -23,4 +23,4 @@ assert_cmd = "0.11.1"
 predicates = "1.0.1"
 
 [dependencies]
-clap = {version = "2.33.0", features = ["yaml"]}
+structopt = "0.2.18"
